BERT v5 (refine relation logic)

--- a/examples/output/1810.04805_A.5_Illustrations_of_Fine-tuning_on_Different_Tasks_entities.json
+++ b/examples/output/1810.04805_A.5_Illustrations_of_Fine-tuning_on_Different_Tasks_entities.json
@@ -7,7 +7,7 @@
       "end_pos": 36
     },
     "attributes": {},
-    "sentence_context": "The illustration of fine-tuning BERT on different tasks can be seen in Figure 4. Our task-specific models are formed by incorporating BERT with one additional output layer, so a minimal number of parameters need to be learned from scratch.",
+    "sentence_context": "The illustration of fine-tuning BERT on different tasks can be seen in Figure 4.",
     "sentence_index": 0,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -19,7 +19,7 @@
       "end_pos": 340
     },
     "attributes": {},
-    "sentence_context": "Our task-specific models are formed by incorporating BERT with one additional output layer, so a minimal number of parameters need to be learned from scratch. MNLI Multi-Genre Natural Language Inference is a large-scale, crowdsourced entailment classification task. Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one.",
+    "sentence_context": "MNLI Multi-Genre Natural Language Inference is a large-scale, crowdsourced entailment classification task.",
     "sentence_index": 2,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -31,7 +31,7 @@
       "end_pos": 283
     },
     "attributes": {},
-    "sentence_context": "Our task-specific models are formed by incorporating BERT with one additional output layer, so a minimal number of parameters need to be learned from scratch. MNLI Multi-Genre Natural Language Inference is a large-scale, crowdsourced entailment classification task. Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one.",
+    "sentence_context": "MNLI Multi-Genre Natural Language Inference is a large-scale, crowdsourced entailment classification task.",
     "sentence_index": 2,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -43,7 +43,7 @@
       "end_pos": 550
     },
     "attributes": {},
-    "sentence_context": "Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one. QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
+    "sentence_context": "QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent.",
     "sentence_index": 4,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -55,7 +55,7 @@
       "end_pos": 523
     },
     "attributes": {},
-    "sentence_context": "Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one. QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
+    "sentence_context": "QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent.",
     "sentence_index": 4,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -67,7 +67,7 @@
       "end_pos": 550
     },
     "attributes": {},
-    "sentence_context": "Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one. QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
+    "sentence_context": "QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent.",
     "sentence_index": 4,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -79,7 +79,7 @@
       "end_pos": 688
     },
     "attributes": {},
-    "sentence_context": "QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_context": "QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
     "sentence_index": 5,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -91,7 +91,7 @@
       "end_pos": 744
     },
     "attributes": {},
-    "sentence_context": "QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_context": "QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
     "sentence_index": 5,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -103,7 +103,7 @@
       "end_pos": 824
     },
     "attributes": {},
-    "sentence_context": "QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_context": "The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
     "sentence_index": 6,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -115,7 +115,7 @@
       "end_pos": 918
     },
     "attributes": {},
-    "sentence_context": "QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_context": "The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
     "sentence_index": 6,
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   }
